--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "eventemitter3": "^4.0.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-loader-spinner": "^3.1.2",
     "react-scripts": "3.0.1"
   },
   "scripts": {
